added a simple working navbar with hiding menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="header">
-  <div class="header-text">
-      EDGE GUARD
-  </div>
-</div>
-<div style="text-align:center">
+<app-navbar></app-navbar>
+<div class="main-content">
   <h1>
     Welcome to Edge Guard, a podcast where we take a closer look at games on the fringe.
   </h1>
 </div>
+
 
 
 
