Basic feed service working, gnerating content from feed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
   <h1>
     Welcome to Edge Guard, a podcast where we take a closer look at games on the fringe.
   </h1>
+
+  <button (click)="refreshRss()">Refresh RSS</button>
+
+  <div>RSS Stuff: {{ feed?.feed.description }}</div>
 </div>
 
 
