--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
 		<div class="header">
 			<div class="flex-container">
-				<div class="navbar-text">
+				<div class="navbar-text" routerLink="/">
 					EDGE <span class="guard">GUARD</span>
 				</div>
 				<div class="menu-icon"  (click)="toggleHidden()">
@@ -10,7 +10,7 @@
 			</div>
 		</div>
 		<div class="menu" *ngIf="!hidden">
-				menu stuffs
+				<div routerLink="/episodes" (click)="hidden=!hidden">Episodes</div>
 		</div>
 </div>
 
