refactored rss service and removed store, added skeletons for remaining pages

--- a/src/app/episode-detail/episode-detail.component.html
+++ b/src/app/episode-detail/episode-detail.component.html
@@ -1,14 +1,13 @@
-<!-- <div class="episode-detail">
+<div *ngIf="!loading" class="episode-detail">
 	<div class="title">
-		{{ episodeData?.title }}
+		{{ episode.title }}
 	</div>
 	<div class="description">
-		<span [innerHTML]="episodeData?.description"></span>
+		<span [innerHTML]="episode.description"></span>
 	</div>
 
 	<audio controls>
-		<source src="{{episodeData?.enclosure.link}}" type="audio/mpeg">
+		<source src="{{episode.enclosure.link}}" type="audio/mpeg">
 		It looks like your browser doesn't support audio elements! Sorry about that.
 	</audio>
-</div> -->
-{{guid}}
+</div>
