--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
 		<div class="header">
 			<div class="flex-container">
-				<div class="navbar-text" routerLink="/">
+				<div class="navbar-text" routerLink="/" (click)="toggleHidden()">
 					EDGE <span class="guard">GUARD</span>
 				</div>
 				<div class="menu-icon"  (click)="toggleHidden()">
@@ -10,7 +10,9 @@
 			</div>
 		</div>
 		<div class="menu" *ngIf="!hidden">
+				<div routerLink="/about" (click)="hidden=!hidden">About</div>
 				<div routerLink="/episodes" (click)="hidden=!hidden">Episodes</div>
+				<div routerLink="/contact" (click)="hidden=!hidden">Contact Us</div>
 		</div>
 </div>
 
