--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,3 +1,26 @@
-<p>
-  about-page works!
-</p>
+<h1 class="page-title">About</h1>
+<div class="bio-graf">Edge Guard is a podcast about video games on the fringe: games at the unexplored edges of itch.io, student games, experimental releases, and more. 
+	Each week, two friends—one with a degree in game design, one studying games in an English grad program—play and discuss a different game from the edges 
+	of gaming, focusing on what their developers get right rather than what doesn’t quite work. From intresting fun to the productively weird, 
+	 Edge Guard finds games worth playing.
+</div>
+
+<div>
+	<h2>Meet Blake</h2>
+	<p>
+		Hi, my name's Blake! I graduated from the Entertainment Arts Engineering program at the University of Utah with a degree in 
+		Computer Science with an Emphasis in Game Design. I've designed a handful of games of my own, and I love to apply the knowledge 
+		I have of game design to the analysis of every game I play. I believe that criticism is one of the most powerful tools 
+		we have for bettering our society, and I seek to apply that ethos to every episode of this show. I also make music occasionally 
+		(like our theme song!) and I even built this very website! Follow me on <a href="https://twitter.com/Blake_Beckett">Twitter!</a>
+	</p>
+</div>
+
+<div>
+	<h2>Meet Jordan</h2>
+	<p>
+		My name is Jordan Pruett. I am a Ph.D student in the English department at the University of Chicago, where I study the 
+		post-1945 American novel, videogames, and Marxist critical theory. Follow me on <a href="https://twitter.com/pruett_jordan">Twitter</a>
+		and check out my blog, <a href="https://jordanpruett.wordpress.com/">The Arcade Project</a>
+	</p>
+</div>
