added links to show bio

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -2,7 +2,13 @@
 <div class="bio-graf">Edge Guard is a podcast about video games on the fringe: games at the unexplored edges of itch.io, student games, experimental releases, and more. 
 	Each week, two friends—one with a degree in game design, one studying games in an English grad program—play and discuss a different game from the edges 
 	of gaming, focusing on what their developers get right rather than what doesn’t quite work. From intresting fun to the productively weird, 
-	 Edge Guard finds games worth playing.
+	 Edge Guard finds games worth playing.<br><br>
+	 Find us on 
+	 <a href="https://itunes.apple.com/us/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe/id1269394363?mt=2">iTunes</a>, 
+	 <a href="https://open.spotify.com/show/1uK0icCv3ukbwKK7jkJsp1">Spotify</a>, 
+	 <a href="https://play.google.com/music/listen?u=0#/ps/Iipnvaa7illjn6jc7lkjkehsp5q">Google Play</a>, 
+	 <a href="https://www.stitcher.com/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe">Stitcher</a>, 
+	 or hit our RSS feed directly from your favorite podcast app: https://edgeguard.podbean.com/feed
 </div>
 
 <div>
