--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -26,10 +26,6 @@
 	margin: auto;
 }
 
-h2 {
-	
-}
-
 .episodes-link {
 	text-align: center;
 	font-size: 32px;
@@ -43,6 +39,7 @@ h2 {
 	font-size: 32px;
 	margin: auto;
 	margin-bottom: 24px;
+	font-weight: bold;
 }
 
 .footer {
