--- a/src/app/episode-card/episode-card.component.scss
+++ b/src/app/episode-card/episode-card.component.scss
@@ -2,7 +2,8 @@
 
 .episode-card {
 	background-color: $color-white;
-	box-shadow: 5px 5px 8px -2px rgba(136,136,136,0.75);
+	color: $color-purple-dark;
+	box-shadow: 5px 5px 8px -2px $color-purple-dark;
 	border-radius: 4px;
 	// border: solid 1px $color-purple-dark;
 	padding: 16px;
@@ -11,15 +12,43 @@
 	}
 }
 
-.title {
-	font-size: 24px;
-	font-weight: bold;
+.top-section {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+	.number {
+		font-size: 16px;
+		color: $color-purple-light;
+	}
+	.title {
+		font-size: 32px;
+	}
+
+	audio {
+		min-width: 300px;
+		margin-top: 8px;
+	}
 }
 
 .description {
 	font-size: 16px;
 }
 
-audio {
-	margin-top: 16px;
+.show-more {
+	line-height: 24px;
+	vertical-align: middle;
+	font-size: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: $color-purple-light;
+	text-align: center;
+
+	.material-icons {
+		vertical-align: bottom;
+		margin-left: 4px;
+	}
 }
+
+
