Updated styling and added images for about page

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,32 +1,52 @@
-<h1 class="page-title">About</h1>
-<div class="bio-graf">Edge Guard is a podcast about video games on the fringe: games at the unexplored edges of itch.io, student games, experimental releases, and more. 
-	Each week, two friends—one with a degree in game design, one studying games in an English grad program—play and discuss a different game from the edges 
-	of gaming, focusing on what their developers get right rather than what doesn’t quite work. From intresting fun to the productively weird, 
-	 Edge Guard finds games worth playing.<br><br>
-	 Find us on 
-	 <a href="https://itunes.apple.com/us/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe/id1269394363?mt=2">iTunes</a>, 
-	 <a href="https://open.spotify.com/show/1uK0icCv3ukbwKK7jkJsp1">Spotify</a>, 
-	 <a href="https://play.google.com/music/listen?u=0#/ps/Iipnvaa7illjn6jc7lkjkehsp5q">Google Play</a>, 
-	 <a href="https://www.stitcher.com/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe">Stitcher</a>, 
-	 or hit our RSS feed directly from your favorite podcast app: https://edgeguard.podbean.com/feed
-</div>
+<div class="page-title">About the Podcast:</div>
+<div class="main-content">
+	<div class="card">
+		<div class="card-flex">
+			<img src="../../assets/Key Art.png">
+			<div class="about-graf">Edge Guard is a podcast about video games on the fringe: games at the unexplored edges of itch.io, student games, experimental releases, and more. 
+				Each week, two friends—one with a degree in game design, one studying games in an English grad program—play and discuss a different game from the edges 
+				of gaming, focusing on what their developers get right rather than what doesn’t quite work. From intresting fun to the productively weird, 
+				 Edge Guard finds games worth playing.
+			</div>
+		</div>
+		<div class="find-us">
+			Find us on 
+			<a href="https://itunes.apple.com/us/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe/id1269394363?mt=2">iTunes</a>, 
+			<a href="https://open.spotify.com/show/1uK0icCv3ukbwKK7jkJsp1">Spotify</a>, 
+			<a href="https://play.google.com/music/listen?u=0#/ps/Iipnvaa7illjn6jc7lkjkehsp5q">Google Play</a>, 
+			<a href="https://www.stitcher.com/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe">Stitcher</a>, 
+			or hit our <a href="https://edgeguard.podbean.com/feed">RSS feed</a> directly from your favorite podcast app. 
+			Also, make sure to follow us on Twitter 
+			<a href="https://twitter.com/EdgeGuardCast">@EdgeGuardCast</a> for our latest updates and links to the games we play.
+		</div>
+	</div>
 
-<div>
-	<h2>Meet Blake</h2>
-	<p>
-		Hi, my name's Blake! I graduated from the Entertainment Arts Engineering program at the University of Utah with a degree in 
-		Computer Science with an Emphasis in Game Design. I've designed a handful of games of my own, and I love to apply the knowledge 
-		I have of game design to the analysis of every game I play. I believe that criticism is one of the most powerful tools 
-		we have for bettering our society, and I seek to apply that ethos to every episode of this show. I also make music occasionally 
-		(like our theme song!) and I even built this very website! Follow me on <a href="https://twitter.com/Blake_Beckett">Twitter!</a>
-	</p>
-</div>
-
-<div>
-	<h2>Meet Jordan</h2>
-	<p>
-		My name is Jordan Pruett. I am a Ph.D student in the English department at the University of Chicago, where I study the 
-		post-1945 American novel, videogames, and Marxist critical theory. Follow me on <a href="https://twitter.com/pruett_jordan">Twitter</a>
-		and check out my blog, <a href="https://jordanpruett.wordpress.com/">The Arcade Project</a>
-	</p>
+	<div class="page-title">Meet your hosts:</div>
+	
+	<div class="card"> 
+		<div class="bio-title">Blake</div>
+		<div class="card-flex">
+			<img src="../../assets/blake_photo.JPG">
+			<div class="bio-text">
+				Hi, my name's Blake! I graduated from the Entertainment Arts Engineering program at the University of Utah with a degree in 
+				Computer Science with an Emphasis in Game Design. I've designed a handful of games of my own, and I love to apply the knowledge 
+				I have of game design to the analysis of every game I play. I believe that criticism is one of the most powerful tools 
+				we have for bettering our society, and I seek to apply that ethos to every episode of this show. I also make music occasionally 
+				(like our theme song!) and I even built this very website! Follow me on <a href="https://twitter.com/Blake_Beckett">Twitter!</a>
+			</div>
+		</div>
+	</div>
+	
+	<div class="card">
+		<div class="bio-title">Jordan</div>
+		<div class="card-flex">
+			<img src="../../assets/jordan_photo.JPG">
+			<div class="bio-text"> 
+					Hey, listen! I’m a Ph.D student in the English Department at the University of Chicago, where I study the overlapping 
+					histories of new media and political economy in the late 20th and early 21st centuries. An article I wrote about 
+					simulations of labor and automation in contemporary videogames will appear in the journal Theory and Event in 2019, 
+					and I also write a blog about videogames and politics called <a href="https://jordanpruett.wordpress.com/">The Arcade Project</a>.
+			</div>
+		</div>
+	</div>
 </div>
