--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -15,10 +15,10 @@
 	</div>
 	
 	<div class="episodes-link">
-		<a href="/episodes">More Episodes</a>
+		<a routerLink="/episodes">More Episodes</a>
 	</div>
 </div>
 
-<div class="footer"></div>>
+<div class="footer"></div>
 
 
