Various fixes and tweaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
-<div class="main-padding">
-	<router-outlet></router-outlet>
+<div class="wrapper">
+	<div class="main-padding">
+		<router-outlet></router-outlet>
+	</div>
+	<div class="footer">
+		<div class="container">
+			<span>Edge Guard 2018. Website by Blake Beckett</span>
+		</div>
+	</div>
 </div>
 
 
