--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -24,28 +24,33 @@
 	<div class="page-title">Meet your hosts:</div>
 	
 	<div class="card"> 
-		<div class="bio-title">Blake</div>
 		<div class="card-flex">
 			<img src="../../assets/blake_photo.JPG">
-			<div class="bio-text">
-				Hi, my name's Blake! I graduated from the Entertainment Arts Engineering program at the University of Utah with a degree in 
-				Computer Science with an Emphasis in Game Design. I've designed a handful of games of my own, and I love to apply the knowledge 
-				I have of game design to the analysis of every game I play. I believe that criticism is one of the most powerful tools 
-				we have for bettering our society, and I seek to apply that ethos to every episode of this show. I also make music occasionally 
-				(like our theme song!) and I even built this very website! Follow me on <a href="https://twitter.com/Blake_Beckett">Twitter!</a>
+			<div class="bio-flex">
+				<div class="bio-title">Blake</div>
+				<div class="bio-text">
+					I graduated from the Entertainment Arts Engineering program at the University of Utah with a degree in 
+					Computer Science with an Emphasis in Game Design. I've designed a handful of games of my own, and I love to apply the knowledge 
+					I have of game design to the analysis of every game I play. I also make music occasionally 
+					(like our theme song!) and I even built this very website! Follow me on <a href="https://twitter.com/Blake_Beckett">Twitter!</a>
+					<!-- I believe that criticism is one of the most powerful tools 
+					we have for bettering our society, and I seek to apply that ethos to every episode of this show.  -->
+				</div>
 			</div>
 		</div>
 	</div>
 	
 	<div class="card">
-		<div class="bio-title">Jordan</div>
 		<div class="card-flex">
 			<img src="../../assets/jordan_photo.JPG">
-			<div class="bio-text"> 
-					Hey, listen! I’m a Ph.D student in the English Department at the University of Chicago, where I study the overlapping 
-					histories of new media and political economy in the late 20th and early 21st centuries. An article I wrote about 
-					simulations of labor and automation in contemporary videogames will appear in the journal Theory and Event in 2019, 
-					and I also write a blog about videogames and politics called <a href="https://jordanpruett.wordpress.com/">The Arcade Project</a>.
+			<div class="bio-flex">
+				<div class="bio-title">Jordan</div>
+				<div class="bio-text"> 
+						Hey, listen! I’m a Ph.D student in the English Department at the University of Chicago, where I study the overlapping 
+						histories of new media and political economy in the late 20th and early 21st centuries. An article I wrote about 
+						simulations of labor and automation in contemporary videogames will appear in the journal Theory and Event in 2019, 
+						and I also write a blog about videogames and politics called <a href="https://jordanpruett.wordpress.com/">The Arcade Project</a>.
+				</div>
 			</div>
 		</div>
 	</div>
