--- a/src/app/about-page/about-page.component.scss
+++ b/src/app/about-page/about-page.component.scss
@@ -33,14 +33,18 @@
 }
 
 .bio-title {
-	margin-bottom: 16px;
+	color: $color-purple-light;
+	margin-bottom: 4px;
+}
+
+.bio-flex {
+	max-width: 530px;
+	flex: 1 1 260px;
+	margin: auto;
 }
 
 .bio-text {
 	font-size: 16px;
-	max-width: 540px;
-	flex: 1 1 280px;
-	margin: auto;
 }
 
 img {
@@ -55,7 +59,7 @@ img {
 	color: $color-purple-dark;
 	box-shadow: 5px 5px 8px -2px $color-purple-dark;
 	border-radius: 4px;
-	padding: 16px;
+	padding: 24px;
 	.a {
 		font-size: 16px;
 	}
@@ -68,7 +72,7 @@ img {
 	align-content: center;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: $width-breakpoint) {
 	img {
 		margin: 0 16px 0 0;
 		height: 200px;
