--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,12 +6,19 @@ $color-purple-dark: #4b3570;
 $color-purple-light: #9a7fc7;
 $color-purple-lightest: #e5e1f7;
 
+$width-breakpoint: 600px;
+
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	color: $color-purple-dark;
 	box-sizing: border-box;
     background-color: $color-purple-lightest;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 10px;
-    margin: 0;
 }
 
