Fixed a whole bunch of stuff, teh site seems ready to go

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -9,20 +9,25 @@
 				 Edge Guard finds games worth playing.
 			</div>
 		</div>
-		<div class="find-us">
-			Find us on 
-			<a href="https://itunes.apple.com/us/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe/id1269394363?mt=2">iTunes</a>, 
-			<a href="https://open.spotify.com/show/1uK0icCv3ukbwKK7jkJsp1">Spotify</a>, 
-			<a href="https://play.google.com/music/listen?u=0#/ps/Iipnvaa7illjn6jc7lkjkehsp5q">Google Play</a>, 
-			<a href="https://www.stitcher.com/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe">Stitcher</a>, 
-			or hit our <a href="https://edgeguard.podbean.com/feed">RSS feed</a> directly from your favorite podcast app. 
-			Also, make sure to follow us on Twitter 
-			<a href="https://twitter.com/EdgeGuardCast">@EdgeGuardCast</a> for our latest updates and links to the games we play.
+	</div>
+
+	<div class="page-title">Where to find us:</div>
+	<div class="card">
+		<div class="card-flex">
+			<div class="find-us">
+				Find us on 
+				<a href="https://itunes.apple.com/us/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe/id1269394363?mt=2">iTunes</a>, 
+				<a href="https://open.spotify.com/show/1uK0icCv3ukbwKK7jkJsp1">Spotify</a>, 
+				<a href="https://play.google.com/music/listen?u=0#/ps/Iipnvaa7illjn6jc7lkjkehsp5q">Google Play</a>, 
+				<a href="https://www.stitcher.com/podcast/edge-guard-taking-a-closer-look-at-games-on-the-fringe">Stitcher</a>, 
+				or hit our <a href="https://edgeguard.podbean.com/feed">RSS feed</a> directly from your favorite podcast app. 
+				Also, make sure to follow us on Twitter 
+				<a href="https://twitter.com/EdgeGuardCast">@EdgeGuardCast</a> for our latest updates and links to the games we play.
+			</div>
 		</div>
 	</div>
 
 	<div class="page-title">Meet your hosts:</div>
-	
 	<div class="card"> 
 		<div class="card-flex">
 			<img src="../../assets/blake_photo.JPG">
