--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@
 
 .wrapper {
 	display: flex;
+	margin-top: 70px;
 	justify-content: space-between;
 	flex-direction: column;
 	min-height: calc(100% - 70px);
