--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -1,23 +1,26 @@
-<h1>Get in Touch</h1>
-<p>The easiest way to reach out is to send us a direct message or reply on <a href="https://twitter.com/EdgeGuardCast">Twitter</a>. 
-	If that doesn't work for you, use the form below to send and email to edgeguardpodcast@gmail.com
-</p>
+<div class="main-content">
+	<div class="page-title">Get in touch:</div>
+	<div class="card">
+		The easiest way to reach out is to send us a direct message or reply on <a href="https://twitter.com/EdgeGuardCast">Twitter</a>. 
+		If that doesn't work for you, feel free to send an email to edgeguardpodcast@gmail.com
+	</div>
 
-<form>
-	<!-- name -->
-	<div class="field">
-		<input type="text" name="name" class="input" placeholder="Your Name">
-	</div>
-	
-	<!-- email -->
-	<div class="field">
-		<input type="email" name="email" class="input" placeholder="Your Email">
-	</div>
-	
-	<!-- message -->
-	<div class="field">
-		<textarea class="textarea" name="message" placeholder="What's on your mind?"></textarea>
-	</div>
-	
-	<button type="submit" class="button">Submit</button>
-</form>
+	<form>
+		<!-- name -->
+		<div class="field">
+			<input type="text" name="name" class="input" placeholder="Your Name">
+		</div>
+		
+		<!-- email -->
+		<div class="field">
+			<input type="email" name="email" class="input" placeholder="Your Email">
+		</div>
+		
+		<!-- message -->
+		<div class="field">
+			<textarea class="textarea" name="message" placeholder="What's on your mind?"></textarea>
+		</div>
+		
+		<button type="submit" class="button">Submit</button>
+	</form>
+</div>
