--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,6 +4,8 @@
 </div>
 
 <div class="main-content">
+	<div *ngIf="!feedLoaded" class="loader">Loading...</div>
+
 	<div class="episodes-title">
 		Recent Episodes:
 	</div>
