--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,16 +8,16 @@
 					<i class="material-icons">menu</i>
 				</div>
 				<div class="desktop-links">
+					<span class="link" routerLink="/">Home</span>
 					<span class="link" routerLink="/about">About</span>
 					<span class="link" routerLink="/episodes">Episodes</span>
-					<span class="link" routerLink="/contact">Contact</span>
 				</div> 
 			</div>
 		</div>
 		<div class="mobile-menu" *ngIf="!hidden">
+				<div routerLink="/" (click)="hidden=!hidden">Home</div>
 				<div routerLink="/about" (click)="hidden=!hidden">About</div>
 				<div routerLink="/episodes" (click)="hidden=!hidden">Episodes</div>
-				<div routerLink="/contact" (click)="hidden=!hidden">Contact Us</div>
 		</div>
 </div>
 
