--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,7 +2,11 @@
 
 .navbar {
     background-color: $color-purple-dark;
-    color: $color-white;
+	color: $color-white;
+	position: fixed;
+	top: 0;
+	width: 100%;
+    z-index: 100;
 
 	.header {
 		margin: 0px;
@@ -22,6 +26,7 @@
 
     .navbar-text {
 		float: left;
+		margin-left: 8px;
         font-family: 'Monoton';
         font-size: 32px;
         vertical-align: middle;
@@ -54,6 +59,10 @@
 	@media screen and (min-width: $width-breakpoint) {
 		.mobile-menu, .menu-icon { 
 			display: none;
+		}
+
+		.navbar-text {
+			margin-left: 24px;
 		}
 
 		.desktop-links {
