--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,81 @@ body {
 	box-sizing: border-box;
     background-color: $color-purple-lightest;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 10px;
+	font-size: 16px;
 }
+
+a {
+	color: $color-purple-light;
+}
+
+a:visited {
+	color: $color-purple-dark;
+}
+
+.main-content {
+	max-width: 800px;
+	margin: auto;
+}
+
+.card {
+	background-color: $color-white;
+	color: $color-purple-dark;
+	box-shadow: 0 3px 5px 0 rgba($color-purple-dark, 0.2);
+	border-radius: 4px;
+	padding: 24px;
+	margin-bottom: 24px;
+}
+
+.page-title {
+	text-align: center;
+	font-size: 32px;
+	margin: auto;
+	margin-bottom: 24px;
+	font-weight: bold;
+}
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 5px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(79,42,177, 0.2);
+  border-right: 1.1em solid rgba(79,42,177, 0.2);
+  border-bottom: 1.1em solid rgba(79,42,177, 0.2);
+  border-left: 1.1em solid $color-purple-dark;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
+
 
